tests/NormalTests/paczka1/fuzzy1/55191650.err
Error in line 4: OGtQu6 S761 1,8
Error in line 8: A731 A731 135,38
Error in line 1: A731 A731 29,4
Error in line 15: J1WdrdnJV5 S761 91,1
Error in line 18: 0cEBj2P S761 73,6
Error in line 29: OGtQu6 Ar6r r9,6
Error in line 22: OGtQu6 A363 96,3
Error in line 25: 0cEBj2P A163 464,1
Error in line 31: OGtQu6 S761 74,4
